[package]
name = "asset-derive"
version = "0.1.1"
edition = "2021"
authors = ["Shadorain <jordanf7517@gmail.com>"]
description = "Simple asset handling derive macro for enums, and a proc-macro learning resource!"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/Shadorain/asset-derive"
keywords = ["asset", "assets", "derive"]
categories = ["derive", "proc-macro"]

[lib]
name = "asset_derive"
proc-macro = true

[dependencies]
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full", "extra-traits"] }
